Add transaction query parameter to batch request (v1/batch) #4
